# swing-trader-v2

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: daily_eod_scan.yml  live_provider_smoke.yml  regression_artifacts.yml
.tmp_pipeline/: bars.json  daily_scan.json  dashboard.json  packet_build.json  rankings.json  symbol_metadata.json  tracking.json
config/: anchors.yaml  artifacts.yaml  eligibility.yaml  features.yaml  prioritization.yaml  setups.yaml  tracking.yaml  universe.yaml
config/environments/: github_actions.yaml
docs/: architecture.md
schemas/: candidate_list.schema.json  dashboard_payload.schema.json  decision_event.schema.json  outcome_record.schema.json  packet.schema.json  ranking.schema.json  run_manifest.schema.json
src/swingtrader_v2/: __init__.py
tests/: conftest.py
tests/analysis/: test_features.py
tests/anchors/: test_avwap.py  test_fixture_anchors.py  test_resolver.py
tests/data/: test_freshness.py  test_live_provider_smoke.py
tests/fixtures/: scenario_catalog.json
tests/integration/: test_eod_universe_snapshot.py  test_pipeline_regression.py
tests/market/: test_bars.py  test_universe_builder.py
tests/packet/: test_packet_determinism.py  test_packet_phase5a.py  test_packet_schema.py
tests/reporting/: test_dashboard_reporting.py
tests/scanner/: test_candidate_filters.py  test_detectors.py  test_fixture_scenarios.py
tests/selector/: _helpers.py  test_classifier.py  test_eligibility.py  test_fixture_regression.py  test_prioritizer.py
tests/tracking/: test_tracking.py
(+91 files in other folders)
