[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swingtrader-v2"
version = "0.1.0"
description = "Production-grade discretionary swing trading decision-support system for liquid U.S. equities."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "yfinance>=0.2,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest_tmp"
testpaths = ["tests"]
markers = [
  "live_provider: exercises the live yfinance provider contract and may be skipped when provider access is unavailable",
]
